@@ -1,0 +1,5 @@
+%%Title: ./brave-gnu-world-logo.25.jpg
+%%Creator: ebb Version 0.5.2
+%%BoundingBox: 0 0 246 279
+%%CreationDate: Thu Dec 20 23:49:52 2007
+
