@@ -264,7 +264,7 @@ red state to a green state.
 
 \begin{codeexample}[]
 \begin{tikzpicture}[shorten >=1pt,node distance=2cm,>=stealth',thick,
-    every state/.style={fill,draw=none,orange,text=white},
+    every state/.style={fill,draw=none,orange,text=white,circular drop shadow},
     accepting/.style  ={green!50!black,text=white},
     initial/.style    ={red,text=white}]
 
