@@ -472,7 +472,7 @@ visually rather pleasing effects:
             bottom color=transparent!50,
             middle color=transparent!20]
 \begin{tikzpicture}
-  \node      [circle,circular shadow,
+  \node      [circle,circular drop shadow,
               pattern=horizontal lines dark blue,
               path fading=south,
               minimum size=3.6cm] {};
