@@ -7,7 +7,7 @@
 %
 % See the file doc/generic/pgf/licenses/LICENSE for more details.
 
-\ProvidesPackageRCS[v\pgfversion] $Header: /home/mojca/cron/mojca/github/cvs/pgf/pgf/generic/pgf/systemlayer/pgfsys.code.tex,v 1.29 2007/12/12 16:57:17 tantau Exp $
+\ProvidesPackageRCS[v\pgfversion] $Header: /home/mojca/cron/mojca/github/cvs/pgf/pgf/generic/pgf/systemlayer/pgfsys.code.tex,v 1.30 2008/01/13 15:30:04 tantau Exp $
 
 
 % Load key mechanism
@@ -541,7 +541,7 @@
 %
 %
 
-\def\pgfsys@horishading#1#2#3{\pgf@sys@fail{shadings}}
+\def\pgfsys@horishading#1#2#3{\pgf@sys@fail{shadings}\pgf@sys@noshading{#1}}
 % Declares a horizontal shading for later use. The effect of this
 % command should be the definition of a macro called `@pgfshading#1!'
 % (or \csname @pdfshading#1!\endcsname, to be precise). When invoked,
@@ -556,11 +556,11 @@
 % When `@pgfshading#1!' is invoked, it should insert a box of height
 % #2 and the width implicit in the shading declaration.
 
-\def\pgfsys@vertshading#1#2#3{\pgf@sys@fail{shadings}}
+\def\pgfsys@vertshading#1#2#3{\pgf@sys@fail{shadings}\pgf@sys@noshading{#1}}
 % Like horishading, only for vertical shadings. This time, the height
 % of the shading is implicit in #3 and the width is given as #2.
 
-\def\pgfsys@radialshading#1#2#3{\pgf@sys@fail{shadings}}
+\def\pgfsys@radialshading#1#2#3{\pgf@sys@fail{shadings}\pgf@sys@noshading{#1}}
 % Declares a radial shading. Like the previous macros, this command
 % should setup the macro `@pgfshading#1!', which upon invocation
 % should insert a radial shading whose size is implicit in #3. 
@@ -568,7 +568,7 @@
 % The parameter #2 is a pgf point specification if the starting point
 % of the shading. See the pgfuserguide for details.
 
-\def\pgfsys@functionalshading#1#2#3#4{\pgf@sys@fail{shadings (functional)}}
+\def\pgfsys@functionalshading#1#2#3#4{\pgf@sys@fail{shadings (functional)}\pgf@sys@noshading{#1}}
 % Declares a shading using a PostScript-like function that provides a
 % color for each point. Like the previous macros, this command
 % should setup the macro `@pgfshading#1!' so that it will produce a
@@ -590,6 +590,7 @@
 % A buggy #4 will result is *totally unpredictable chaos* during
 % rendering. 
 
+\def\pgf@sys@noshading#1{\expandafter\global\expandafter\let\csname @pgfshading#1!\endcsname=\pgfutil@empty}
 
 
 
